public/stylesheet/stylesheet.css
body.bkgd-image {
  background: url('../images/marble.png');
  background-size: cover;
  background-attachment: fixed;
}

* {
  box-sizing: border-box;
}

h1 {
  font-family: "fredoka one", sans-serif;
  font-weight: 200;
}

body {
  font-size: 16px;
  font-weight: normal;
  font-family: "Poppins", arial, sans-serif;
}

div.container {
  display: block;
  padding-top: 75px;
  padding-bottom: 175px;
}

.form-control {
    border-radius: 10px;
    box-shadow:0 1px 0 #cfcfcf;
}

.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

[class*="col-"]{
  float: left;
  padding: 15px;

}

.center {
  text-align: center;
  margin-left:auto;
  margin-right:auto;

}

.wrapper {
  background-color: #EDEDED;
  border-color:#d2d2d2;
  border-radius: 15px;
  border-width: 5px;
  box-shadow:0 1px 0 #cfcfcf;
  text-align: center;
}

.button {
  font-family: "Poppins", arial, sans-serif;
  background-color: white;
  border-radius: 25px;

}

input::placeholder {
  text-align: center;
  font-family: "Poppins", arial, sans-serif;
}

div.outer-div {
  display: block;
  width: auto;
}

.border-bottom {
  border: 0 solid #fff;
  border-bottom-width: 1px;
  padding-bottom: 10px;
  text-align: center;
}

a {
  text-decoration: none;
}

#login-signup {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);

}


/* ///////// NAV BAR /////////*/
div.nav {
  overflow: hidden;
  background-color: #f2f2f2;
  border: 1px solid #e7e7e7;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;

}

a {
  display: block;
  color: black;
  text-align: center;
  padding: 10px;
  text-decoration: none;
  font-size: 16px;
  float: left;

}

a:hover {
  background-color: white;
}

p.welcome-user {
  padding-right: 15px;
  text-transform: capitalize;
  font-style: italic;
  font-weight: bold;
  float: right;
}

/* /////////  FOOTER ///////// */

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 40px;
  background-color: #E3E3E3;
  color: #595959;
  text-align: center;
  margin-top: 50px;
  overflow: hidden;
}

/* ///////STYLING FLASH MESSAGES ///////*/
.flash-message{
  position: fixed;
  padding: 15px;
  margin: 15px;
  border: 2px;
  font-family: "Poppins", sans-serif;
  font-size: 20px;
  text-align: center;
}


/* RESPONSIVE FOR SMALLEST DEVICE */
/*phones, 600px and down*/
@media only screen and (max-width: 600px){

  [class*="col-"] {
    width: 100%;
}

/* INDEX */

div#index-page >img.wrapper {
  padding: 10px;

}

div#nav ul li a {
  font-size: 16px;
}

/* RESTAURANT EDIT & NEW */


/* RESTAURANT INDEX */

/* RESTAURANT SHOW */

/* USER CREATE & LOGIN */
div.wrapper.col-8 {
  margin-top: 75px;
  padding-bottom: 20px;
}

p.requirements {
  font-size: 12px;
}

/* USER SHOW */
#user-home {
  margin-top: 80px;
  padding-right: 5%;
  padding-left: 5%;
  padding-bottom: 50px;
}

.section {
  display: block;
  padding-left: 12%;
  padding-right: 12%;
  margin-bottom: 100px;
}

.breaking-display-block{
  display: block;
  margin-bottom: 50px;
}

a.wrapper {
  display:block;
  padding
  margin-top: 10px;
  margin-bottom: 10px;

}

h1.home-title {
  text-transform: capitalize;
  text-align: center;

}

#created-title{
  text-align: center;
  padding-top: 20px;
  margin-top: 20px;
  z-index: 1;
  border-bottom: 1px solid black;

}
#bookmarked-title {
text-align: center;
padding-top: 20px;
margin-top: 20px;
line-height: 3em;
vertical-align: text-bottom;
z-index: 1;
border-bottom: 1px solid black;
}

}




/* RESPONSIVE FOR SMALL DEVICE */
/*tablets and large phones */
@media only screen and (min-width: 600px){

}
/*RESPONSIVE FOR MEDIUM DEVICES */
@media only screen and (min-width: 768px){

}

/*RESPONSIVE FOR LARGE DEVICES */
/*laptops and desktops*/
@media only screen and (min-width: 992px){


}

/*RESPONSIVE FOR XL DEVICES */
/*large laptops and desktops */
@media only screen and (min-width: 1200px){

}

